--- a/LMSBorrowerTry/src/main/resources/application.properties
+++ b/LMSBorrowerTry/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
+
+##spring.datasource.url = jdbc:mysql://localhost:3306/library?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+##spring.datasource.username = root
+##spring.datasource.password = ******
+
 ## Hibernate Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
